<resources>
    <string name="app_name">Footprints</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_my_footprints">My Footprints</string>
    <string name="action_grid">Show Grid</string>
    <string name="action_list">Show List</string>
    <string name="action_favorite_footprints">My Favorite Footprints</string>
    <string name="action_my_footprints_in_the_world">My Footprints in the World</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About Footprints</string>
    <string name="action_delete_all_footprints">Delete All Footprints</string>
    <string name="action_log_out">Log out</string>
    <string name="action_save">Save</string>
    <string name="action_notes">Write some notes</string>
    <string name="action_place">Add that special place</string>
    <string name="action_picture">Take or choose a picture</string>
    <string name="action_audio_note">Record an audio note</string>
    <string name="action_date">Add a date to remember</string>
    <string name="action_name">Name your footprint</string>
    <string name="action_delete">Delete</string>

    <string name="footprint_icon">Footprint icon</string>
    <string name="welcome_to_footprints">Welcome to Footprints</string>
    <string name="welcome_copy">Welcome to your digital treasure box of great memories and moments. Let\'s get your app ready to immortalize your footprints.</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>

    <string name="logging_in">Logging in…</string>
    <string name="disconnect">Disconnect</string>

    <string name="profile_picture">User profile picture</string>

    <string name="title_create_new_footprint">Create New Footprint</string>
    <string name="name_it">NAME IT</string>
    <string name="itsy_bitsy_details">ITSY BITSY DETAILS</string>
    <string name="make_it_beautiful">MAKE IT BEAUTIFUL</string>

    <string name="icon">Icon</string>
    <string name="cancel">Cancel</string>
    <string name="footprint_item_photo">Footprint item photo</string>
    <string name="favorite_button_icon">Favorite button icon</string>
    <string name="name_your_footprint">Name your Footprint</string>
    <string name="my_most_amazing_moment">My Most Amazing Moment</string>

    <string name="title_write_your_memories">Write Your Memories</string>
    <string name="title_delete_all_footprints">Delete All Footprints</string>
    <string name="delete_all_footprints_dialog_message">Do you REALLY want to delete all your footprints and all media files associated to them? Are you absolutely sure you want delete all footprints? This action CANNOT be undone, proceed with caution.</string>
    <string name="no_footprints_here_yet">No footprints here yet</string>
    <string name="title_up_to_30_amazing_seconds">Up To 30 Amazing Seconds</string>

    <string name="action_facebook">Share on Facebook</string>
    <string name="action_instagram">Share on Instagram</string>
    <string name="action_choose_others">Choose other…</string>
    <string name="action_share_footprint">Share Footprint</string>
    <string name="share_button_icon">Share button icon</string>

    <string name="facebook_app_not_installed">The Facebook application is not installed.</string>
    <string name="share">Where do you want to share your footprint?</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="remove">Remove</string>
    <string name="saving">Saving…</string>
    <string name="image_path_null">Image path is null.</string>

    <string name="action_locate_me">Locate Me</string>
    <string name="loading">Loading…</string>
    <string name="search_icon">Search icon</string>
    <string name="action_search">Search</string>
    <string name="search_footprints_hint">Search titles, notes or places…</string>
    <string name="title_search_results">Search Results</string>
    <string name="results_for">Results for</string>
    <string name="choose_place">Choose Place</string>
    <string name="no_results_found_image">No results found image</string>

    <string name="no_footprint_extras">There is no footprint data to show.</string>

    <string name="and_the_itsy_bitsy_details">AND THE ITSY BITSY DETAILS</string>
    <string name="it_could_speak_for_itself">IT COULD SPEAK FOR ITSELF</string>
    <string name="manage_audio_note">Manage audio note</string>
    <string name="so_beautiful">SO BEAUTIFUL</string>
    <string name="you_can_change_the_name">YOU CAN CHANGE THE NAME</string>
    <string name="manage_your_footprint">MANAGE YOUR FOOTPRINT</string>
    <string name="action_delete_footprint">Delete Footprint</string>
    <string name="title_delete_footprint">Delete Footprint</string>
    <string name="delete_footprint_dialog_message">Do you REALLY want to delete this footprint and all media files associated to it? This action cannot be undone, proceed with caution.</string>

    <string name="microphone_icon">Microphone icon</string>
    <string name="record_audio_timer">00:00</string>
    <string name="play_recorded_audio">Play recorded audio</string>
    <string name="record_audio">Record audio</string>
    <string name="delete_recorded_audio">Delete recorded audio</string>
    <string name="record">Record</string>
    <string name="play">Play</string>

    <string name="developed_by">DEVELOPED BY</string>
    <string name="bio_jorge">Jorge Tapia: Software engineer, gamer and sybarite. Haiku lover. Writing my life in Swift, Java and JavaScript.</string>
    <string name="bio_mark">Mark Houston: I am a mobile development major at Full Sail University.</string>
    <string name="jorge">Jorge</string>
    <string name="mark">Mark</string>

    <string name="github">Code on GitHub</string>
    <string name="twitter">Follow on Twitter</string>
    <string name="website">Visit Website</string>

    <string name="url_github_jorge">http://github.com/itsProf</string>
    <string name="url_twitter_jorge">http://twitter.com/itsProf</string>
    <string name="url_website_jorge">http://www.jorgetapia.net</string>

    <string name="url_github_mark">http://github.com/MarkHouston</string>
    <string name="url_twitter_mark">http://twitter.com/markchous</string>
    <string name="url_website_mark">http://www.markhouston.net</string>

    <string name="legal_notices">LEGAL NOTICES</string>
    <string name="legal_notices_item">Licenses and Attributions</string>

    <string name="github_icon">GitHub button</string>
    <string name="twitter_icon">Twitter button</string>
    <string name="website_icon">Website button</string>
    <string name="title_legal_notices">Legal Notices</string>
    <string name="contact_button">Contact button</string>

    <string name="dialog_error_title">Ooops!</string>
    <string name="dismiss">Dismiss</string>


</resources>
