<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_footprints"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_my_footprints" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/action_favorite_footprints" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/action_my_footprints_in_the_world" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:checkable="true"
                android:title="@string/action_about" />
            <item
                android:id="@+id/nav_delete_all"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/action_delete_all_footprints" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_sign_out"
                android:title="@string/action_log_out" />
        </menu>
    </item>

</menu>
